[package]
name = "imcon"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple image converter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.13"
image = "0.23.14"
lazy_static = "1.4.0"
magick_rust = "0.15.0"
once_cell = "1.9.0"
pdfium-render = "0.5.0"
